Adding organizers to dynamic content and removing latests spanishs texts

--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "index.html",
     "assets/data/games.json",
     "assets/data/partners.json",
-    "assets/data/media.json"
+    "assets/data/media.json",
+    "assets/data/organizers.json"
   ]
 }
